🎨 place solution in hidden colab cell

--- a/notebooks/1.1 - Les Variables.ipynb
+++ b/notebooks/1.1 - Les Variables.ipynb
@@ -462,7 +462,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%load exercices/1_1_variables.py"
+    "#@ Cliquez ici pour la solution.\n",
+    "# Stockez la valeur approximative de pi (3.141592) dans une variable\n",
+    "pi = 3.141592\n",
+    "\n",
+    "# Stockez la valeur du rayon de la Terre (6 378) (en kilomètres) dans une seconde variable\n",
+    "r = 6378\n",
+    "\n",
+    "# Déclarez une troisième variable en applicant la formule aux deux variables précédentes\n",
+    "C = 2 * pi * r\n",
+    "\n",
+    "# Affichez le contenu de cette dernière variable\n",
+    "C"
    ]
   },
   {
