🐛 fix hidden colab cell

--- a/notebooks/1.1 - Les Variables.ipynb
+++ b/notebooks/1.1 - Les Variables.ipynb
@@ -462,7 +462,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#@ Cliquez ici pour la solution.\n",
+    "#@title Cliquez ici pour la solution.\n",
     "# Stockez la valeur approximative de pi (3.141592) dans une variable\n",
     "pi = 3.141592\n",
     "\n",
