✨ display solutions as Google Colab hidden cells

--- a/notebooks/1.2 - Les controles logiques.ipynb
+++ b/notebooks/1.2 - Les controles logiques.ipynb
@@ -441,8 +441,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "##### Corrigé #####\n",
-    "%load exercices/1_2_controleurs_logiques.py"
+    "#@title Cliquez ici pour la solution.\n",
+    "\n",
+    "if unit == \"Celsius\" or unit == \"C\":\n",
+    "    new_temperature = (9 * temperature) / 5 + 32\n",
+    "    print(str(temperature) + \" Celsius correspond à \" + str(new_temperature) + \" Fahrenheit.\")\n",
+    "elif unit == \"Fahrenheit\" or unit == \"F\":\n",
+    "    new_temperature = (temperature - 32) * 5 / 9\n",
+    "    print(str(temperature) + \" Fahrenheit correspond à \" + str(new_temperature) + \" Celsius.\")"
    ]
   },
   {
