--- a/notebooks/1.3 - Les listes.ipynb
+++ b/notebooks/1.3 - Les listes.ipynb
@@ -369,8 +369,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "##### Corrigé #####\n",
-    "%load exercices/1_3_listes.py"
+    "#@title Cliquez ici pour la solution.\n",
+    "\n",
+    "# Créez une liste contenant les notes de musiques de base\n",
+    "notes = ['do', 'ré', 'mi', 'fa', 'sol', 'la', 'si']\n",
+    "\n",
+    "# Affichez la troisième note\n",
+    "print(notes[2])  # L'index commence à 0 !\n",
+    "\n",
+    "# Affichez la dernière note\n",
+    "print(notes[-1])\n",
+    "\n",
+    "# Affichez les quatrième, cinquième, et sixième notes\n",
+    "print(notes[3:6])  # L'index de fin de slice (ici \"6\") est exclus !\n",
+    "\n",
+    "# Affichez toutes les notes sauf la première\n",
+    "print(notes[1:])"
    ]
   },
   {
