--- a/notebooks/1.4 - Les dictionnaires.ipynb
+++ b/notebooks/1.4 - Les dictionnaires.ipynb
@@ -303,7 +303,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%load exercices/1_4_dictionnaires.py"
+    "#@title Cliquez ici pour la solution.\n",
+    "\n",
+    "# Créez un dictionnaire *car* qui contient les clés / valeurs listées,\n",
+    "# puis affichez le en entier (en utilisant la fonction print)\n",
+    "car = {\"Brand\": \"Renault\", \"Model\": \"Clio 3\", \"Fuel\": \"Gasoil\"}\n",
+    "print(car)\n",
+    "\n",
+    "# Affichez uniquement le modèle de la voiture\n",
+    "print(car[\"Model\"])\n",
+    "\n",
+    "# Affichez toutes les clés du dictionnaire\n",
+    "print(car.keys())\n",
+    "\n",
+    "# La voiture est de couleur grise. \n",
+    "# Ajoutez cette information au sein du dictionnaire !\n",
+    "car[\"color\"] = \"grey\"\n",
+    "print(car)"
    ]
   },
   {
