--- a/notebooks/1.5 - Les boucles.ipynb
+++ b/notebooks/1.5 - Les boucles.ipynb
@@ -309,8 +309,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "##### Corrigé #####\n",
-    "%load exercices/1_5_boucles_1.py"
+    "#@title Cliquez ici pour la solution.\n",
+    "\n",
+    "for i in range(1500, 2701):\n",
+    "    if i % 7 == 0 and i % 5 == 0:  # Est-ce que i est multiple de 7 et de 5 ?\n",
+    "        print(i)"
    ]
   },
   {
@@ -356,8 +359,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "##### Corrigé #####\n",
-    "%load exercices/1_5_boucles_2.py"
+    "#@title Cliquez ici pour la solution.\n",
+    "\n",
+    "# On itere normalement\n",
+    "for i in range(1, 5):\n",
+    "    for j in range(i):\n",
+    "        print(\"* \", end='')\n",
+    "    print(\"\")  # Retour a la ligne\n",
+    "\n",
+    "# On itere a l'envers\n",
+    "for i in range(5, 0, -1):\n",
+    "    for j in range(i):\n",
+    "        print(\"* \", end='')\n",
+    "    print(\"\")  # Retour a la ligne"
    ]
   },
   {
@@ -407,8 +421,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "##### Corrigé #####\n",
-    "%load exercices/1_5_boucles_3.py"
+    "#@title Cliquez ici pour la solution.\n",
+    "\n",
+    "i = 10\n",
+    "# La boucle while est utile car on ne sait pas combien de tentatives seront necessaires\n",
+    "while i >= 2:\n",
+    "    i = randint(0, 11)\n",
+    "    print(i)"
    ]
   },
   {
