--- a/notebooks/1.6 - Les fonctions.ipynb
+++ b/notebooks/1.6 - Les fonctions.ipynb
@@ -473,8 +473,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "##### Corrigé #####\n",
-    "%load exercices/1_6_fonctions_1.py"
+    "#@title Cliquez ici pour la solution.\n",
+    "\n",
+    "def reverse(string):\n",
+    "    new_string = \"\"\n",
+    "    # On parcourt string a l'envers, et on ajoute les lettres une \n",
+    "    # par une a new_string\n",
+    "    for c in range(len(string)-1, -1, -1):\n",
+    "        new_string = new_string + string[c]\n",
+    "    # solution avancee : new_string = string[::-1]\n",
+    "    return new_string\n",
+    "\n",
+    "# Solution avancee :\n",
+    "# def reverse(string):\n",
+    "#     return string[::-1]\n",
+    "\n",
+    "reverse(\"Hello World!\")"
    ]
   },
   {
@@ -521,8 +535,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "##### Corrigé #####\n",
-    "%load exercices/1_6_fonctions_2.py"
+    "#@title Cliquez ici pour la solution.\n",
+    "\n",
+    "from math import exp\n",
+    "def sigmoid(x):\n",
+    "    return 1 / (1 + exp(-x))\n",
+    "\n",
+    "sigmoid(0.5)"
    ]
   },
   {
