🚧 try and make hidden cell hidden by default

--- a/notebooks/1.1 - Les Variables.ipynb
+++ b/notebooks/1.1 - Les Variables.ipynb
@@ -459,7 +459,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "pointed-charleston",
-   "metadata": {},
+   "metadata": {
+    "cellView": "form"
+   },
    "outputs": [],
    "source": [
     "#@title Cliquez ici pour la solution.\n",
