🎨 make hidden cell hidden by default

--- a/notebooks/1.2 - Les controles logiques.ipynb
+++ b/notebooks/1.2 - Les controles logiques.ipynb
@@ -438,7 +438,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "dental-thread",
-   "metadata": {},
+   "metadata": {
+    "cellView": "form"
+   },
    "outputs": [],
    "source": [
     "#@title Cliquez ici pour la solution.\n",
