--- a/notebooks/1.4 - Les dictionnaires.ipynb
+++ b/notebooks/1.4 - Les dictionnaires.ipynb
@@ -300,7 +300,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "northern-creek",
-   "metadata": {},
+   "metadata": {
+    "cellView": "form"
+   },
    "outputs": [],
    "source": [
     "#@title Cliquez ici pour la solution.\n",
