--- a/notebooks/1.5 - Les boucles.ipynb
+++ b/notebooks/1.5 - Les boucles.ipynb
@@ -306,7 +306,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "subtle-contribution",
-   "metadata": {},
+   "metadata": {
+    "cellView": "form"
+   },
    "outputs": [],
    "source": [
     "#@title Cliquez ici pour la solution.\n",
@@ -356,7 +358,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "south-butter",
-   "metadata": {},
+   "metadata": {
+    "cellView": "form"
+   },
    "outputs": [],
    "source": [
     "#@title Cliquez ici pour la solution.\n",
@@ -418,7 +422,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "suited-affiliation",
-   "metadata": {},
+   "metadata": {
+    "cellView": "form"
+   },
    "outputs": [],
    "source": [
     "#@title Cliquez ici pour la solution.\n",
