--- a/notebooks/1.6 - Les fonctions.ipynb
+++ b/notebooks/1.6 - Les fonctions.ipynb
@@ -470,7 +470,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "designing-riverside",
-   "metadata": {},
+   "metadata": {
+    "cellView": "form"
+   },
    "outputs": [],
    "source": [
     "#@title Cliquez ici pour la solution.\n",
@@ -532,7 +534,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "special-emergency",
-   "metadata": {},
+   "metadata": {
+    "cellView": "form"
+   },
    "outputs": [],
    "source": [
     "#@title Cliquez ici pour la solution.\n",
