--- a/notebooks/1.3 - Les listes.ipynb
+++ b/notebooks/1.3 - Les listes.ipynb
@@ -366,7 +366,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "architectural-voltage",
-   "metadata": {},
+   "metadata": {
+    "cellView": "form"
+   },
    "outputs": [],
    "source": [
     "#@title Cliquez ici pour la solution.\n",
