--- a/notebooks/1.7 - Exercice de synthese.ipynb
+++ b/notebooks/1.7 - Exercice de synthese.ipynb
@@ -89,16 +89,61 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "836cd6cb",
-   "metadata": {},
+   "metadata": {
+    "cellView": "form"
+   },
    "outputs": [],
    "source": [
-    "%load exercices/1_exercice.py"
+    "#@title Cliquez ici pour la solution.\n",
+    "\n",
+    "# Dans cette fonction, nous demandons a l'utilisateur s'il souhaite continuer\n",
+    "# et renvoyons un booleen en fonction de sa reponse\n",
+    "# Si nous ne comprenons pas la reponse, nous reponsons la question\n",
+    "def ask_if_keep_going():\n",
+    "    answer = input()\n",
+    "    if answer == 'O':\n",
+    "        return True\n",
+    "    elif answer == 'N':\n",
+    "        return False\n",
+    "    else:\n",
+    "        print(\"Je n'ai pas compris. Utilisez 'O' or 'N'\")\n",
+    "        return ask_if_keep_going()  # On appelle ceci une fonction recursive. Dans certains cas, elle peut s'appeler elle-meme\n",
+    "\n",
+    "print(\"Bienvenue sur la calculatrice Python!\")\n",
+    "keep_going = True\n",
+    "# Boucle principale, durant laquelle nous effectuons un calcul, \n",
+    "# puis demandons a l'utilisateur s'il veut continuer\n",
+    "while keep_going:\n",
+    "    # Recuperation du calcul a effectuer\n",
+    "    print(\"Entrez votre premier nombre :\")\n",
+    "    first_number = int(input())\n",
+    "    print(\"Entrez votre second nombre :\")\n",
+    "    second_number = int(input())\n",
+    "    print(\"Entrez l'opération à effectuer (acceptés : '+', '-', '*', '/') :\")\n",
+    "    operation = input()\n",
+    "    \n",
+    "    # On effectue l'operation demandee\n",
+    "    if operation == \"+\":\n",
+    "        print(first_number + second_number)\n",
+    "    elif operation == \"-\":\n",
+    "        print(first_number - second_number)\n",
+    "    elif operation == \"*\":\n",
+    "        print(first_number * second_number)\n",
+    "    elif operation == \"/\":\n",
+    "        print(first_number / second_number)\n",
+    "    else:\n",
+    "        print(\"Opérateur invalide.\")\n",
+    "\n",
+    "    # Une fois le calcul termine, nous demandons a l'utilisateur s'il veut continuer\n",
+    "    print(\"Voulez-vous continuer ? (O/N)\")\n",
+    "    keep_going = ask_if_keep_going()\n",
+    "print(\"Au revoir.\")"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -112,7 +157,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
