🎨 update title color

--- a/notebooks/1.3 - Les listes.ipynb
+++ b/notebooks/1.3 - Les listes.ipynb
@@ -5,7 +5,7 @@
    "id": "opening-emerald",
    "metadata": {},
    "source": [
-    "# <center><span style=\"color:#D38F00\"><u>SORBONNE DATA ANALYTICS :<br/> Introduction à Python</u></span></center>"
+    "# <center><font color=\"#D38F00\"><u>SORBONNE DATA ANALYTICS :<br/> Introduction à Python</u></font></center>"
    ]
   },
   {
