--- a/notebooks/1.7 - Exercice de synthese.ipynb
+++ b/notebooks/1.7 - Exercice de synthese.ipynb
@@ -5,7 +5,7 @@
    "id": "c991777b",
    "metadata": {},
    "source": [
-    "# <center><span style=\"color:#D38F00\"><u>SORBONNE DATA ANALYTICS :<br/> Introduction à Python</u></span></center>"
+    "# <center><font color=\"#D38F00\"><u>SORBONNE DATA ANALYTICS :<br/> Introduction à Python</u></font></center>"
    ]
   },
   {
