--- a/notebooks/1.6 - Les fonctions.ipynb
+++ b/notebooks/1.6 - Les fonctions.ipynb
@@ -5,7 +5,7 @@
    "id": "9a9f4ab0",
    "metadata": {},
    "source": [
-    "# <center><span style=\"color:#D38F00\"><u>SORBONNE DATA ANALYTICS :<br/> Introduction à Python</u></span></center>"
+    "# <center><font color=\"#D38F00\"><u>SORBONNE DATA ANALYTICS :<br/> Introduction à Python</u></font></center>"
    ]
   },
   {
