--- a/notebooks/2.3 - Le broadcasting.ipynb
+++ b/notebooks/2.3 - Le broadcasting.ipynb
@@ -5,7 +5,7 @@
    "id": "basic-beijing",
    "metadata": {},
    "source": [
-    "# <center><span style=\"color:#D38F00\"><u>SORBONNE DATA ANALYTICS :<br/> Introduction à Python</u></span></center>"
+    "# <center><font color=\"#D38F00\"><u>SORBONNE DATA ANALYTICS :<br/> Introduction à Python</u></font></center>"
    ]
   },
   {
